
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_17__ TYPE_4__ ;
typedef struct TYPE_16__ TYPE_3__ ;
typedef struct TYPE_15__ TYPE_2__ ;
typedef struct TYPE_14__ TYPE_1__ ;


struct pollfd {int member_1; int revents; int member_2; int member_0; } ;
struct TYPE_17__ {TYPE_2__* priv_data; } ;
struct TYPE_16__ {size_t stream_index; } ;
struct TYPE_15__ {scalar_t__ state; size_t nb_rtsp_streams; scalar_t__ lower_transport; TYPE_1__** rtsp_streams; int rtsp_hd; } ;
struct TYPE_14__ {TYPE_4__* transport_priv; } ;
typedef TYPE_1__ RTSPStream ;
typedef TYPE_2__ RTSPState ;
typedef int RTSPMessageHeader ;
typedef TYPE_3__ AVPacket ;
typedef TYPE_4__ AVFormatContext ;


 int AVERROR (int ) ;
 int AVERROR_INVALIDDATA ;
 int EPIPE ;
 int POLLIN ;
 scalar_t__ RTSP_LOWER_TRANSPORT_TCP ;
 scalar_t__ RTSP_STATE_STREAMING ;
 int ff_rtsp_read_reply (TYPE_4__*,int *,int *,int,int *) ;
 int ff_rtsp_skip_packet (TYPE_4__*) ;
 int ff_rtsp_tcp_write_packet (TYPE_4__*,TYPE_1__*) ;
 int ff_write_chained (TYPE_4__*,int ,TYPE_3__*,TYPE_4__*,int ) ;
 int ffurl_get_file_handle (int ) ;
 int poll (struct pollfd*,int,int ) ;

__attribute__((used)) static int rtsp_write_packet(AVFormatContext *s, AVPacket *pkt)
{
    RTSPState *rt = s->priv_data;
    RTSPStream *rtsp_st;
    int n;
    struct pollfd p = {ffurl_get_file_handle(rt->rtsp_hd), POLLIN, 0};
    AVFormatContext *rtpctx;
    int ret;

    while (1) {
        n = poll(&p, 1, 0);
        if (n <= 0)
            break;
        if (p.revents & POLLIN) {
            RTSPMessageHeader reply;





            ret = ff_rtsp_read_reply(s, &reply, ((void*)0), 1, ((void*)0));
            if (ret < 0)
                return AVERROR(EPIPE);
            if (ret == 1)
                ff_rtsp_skip_packet(s);

            if (rt->state != RTSP_STATE_STREAMING)
                return AVERROR(EPIPE);
        }
    }

    if (pkt->stream_index < 0 || pkt->stream_index >= rt->nb_rtsp_streams)
        return AVERROR_INVALIDDATA;
    rtsp_st = rt->rtsp_streams[pkt->stream_index];
    rtpctx = rtsp_st->transport_priv;

    ret = ff_write_chained(rtpctx, 0, pkt, s, 0);




    if (!ret && rt->lower_transport == RTSP_LOWER_TRANSPORT_TCP)
        ret = ff_rtsp_tcp_write_packet(s, rtsp_st);
    return ret;
}
